# HueView

./: BUILDING.md  LIT_RESOURCES.md  README.md  ROADMAP.md  SCHEDULE.md  docker-compose.yml  pyproject.toml
app/: collector.py  indexer.py  main.py  models.py  routes.py
frontend/: package-lock.json  package.json
frontend/app/: page.js
frontend/app/search/: page.js
